@@ -1,3 +1,8 @@
+version 20070829_1
+In the "links" view, allow backing up of all the currently viewed
+pages (and their options) to a zipped tarball.  Also, made the interface
+for these two options a bit more verbose and obvious.
+
 version 20070717_4
 Resolve page aliases when calculating diffs for a page
 for the rollovers in the links page.
